--- a/roles/redisdb/templates/redis.conf
+++ b/roles/redisdb/templates/redis.conf
@@ -1,9 +1,9 @@
 dir "/data"
-port {{redis_port + services[cluster][subcluster][service]['port_offset']}}
-requirepass {{secrets[cluster][subcluster][service]['password']}}
-masterauth {{secrets[cluster][subcluster][service]['password']}}
+port {{redis_port + services[service]['port_offset']}}
+requirepass {{secrets[service]['password']}}
+masterauth {{secrets[service]['password']}}
 
-maxmemory {{services[cluster][subcluster][service]['maxmemory']}}
+maxmemory {{services[service]['maxmemory']}}
 maxmemory-policy volatile-lru
 min-slaves-max-lag 5
 min-slaves-to-write 1
@@ -17,7 +17,7 @@ repl-diskless-sync-delay 5
 latency-monitor-threshold 10
 
 replica-announce-ip {{ansible_default_ipv4.address}}
-replica-announce-port {{redis_port + services[cluster][subcluster][service]['port_offset']}}
+replica-announce-port {{redis_port + services[service]['port_offset']}}
 replicaof localhost 0
 
 # AOF
