--- a/roles/redisdb-misc/templates/redis-backup-config.yml
+++ b/roles/redisdb-misc/templates/redis-backup-config.yml
@@ -1,11 +1,9 @@
 haproxy_redis_local_ssl_port: {{haproxy_redis_local_ssl_port}}
 haproxy_sentinel_ssl_port: {{haproxy_sentinel_ssl_port}}
 
-# cluster: {{cluster}}
-# subcluster: {{subcluster}}
 databases:
-{% for service in services[cluster][subcluster] %}
+{% for service in services %}
   {{service}}:
-    port_offset: {{services[cluster][subcluster][service]['port_offset']}}
-    password: {{secrets[cluster][subcluster][service]['password']}}
+    port_offset: {{services[service]['port_offset']}}
+    password: {{secrets[service]['password']}}
 {% endfor %}
