--- a/roles/redisdb-misc/templates/redis_exporter.config
+++ b/roles/redisdb-misc/templates/redis_exporter.config
@@ -1,4 +1,4 @@
-{% for service in services[cluster][subcluster] -%}
-redis://127.0.0.1:{{redis_port + services[cluster][subcluster][service]['port_offset']}},{{secrets[cluster][subcluster][service]['password']}},{{service}}
-redis://127.0.0.1:{{sentinel_port + services[cluster][subcluster][service]['port_offset']}},{{secrets[cluster][subcluster][service]['password']}},sentinel-{{service}}
+{% for service in services -%}
+redis://127.0.0.1:{{redis_port + services[service]['port_offset']}},{{secrets[service]['password']}},{{service}}
+redis://127.0.0.1:{{sentinel_port + services[service]['port_offset']}},{{secrets[service]['password']}},sentinel-{{service}}
 {% endfor %}
