--- a/roles/redisdb/tasks/main.yml
+++ b/roles/redisdb/tasks/main.yml
@@ -1,31 +1,12 @@
 ---
 
-## NOTE: There are many ways to let Ansible know what cluster/subcluster you are deploying
-## here for example we are using "ec2_instance_facts" module to get AWS EC2 tags
-# # Collect EC2 tags and set facts
-# - local_action:
-#     module: ec2_instance_facts
-#     filters:
-#       "tag:stack_server_type": "{{cluster}}:redisdb"
-#   become: false
-## but for demo these values simply hardcoded
-- set_fact:
-    cluster: "{{ cluster }}"
-## here we assume that hostname is like redisdb-mysubcluster1.testcluster.example.com
-- set_fact:
-        #subcluster: "{{ansible_hostname|regex_replace('\\d+$', '')}}"
-    subcluster: "{{ subcluster }}"
-#
-
 # Setup third-party tools for debugging purpose
 - name: Install redis-cli and docker
   apt:
     update_cache: yes
     pkg:
       - redis-tools
-      - docker-ce
-      - docker-ce-cli
-      - containerd.io
+      - "{{ docker_package }}"
       - python3-pip
 
 # Special user to identify traffic from sentinel containers and direct it over haproxy
@@ -105,18 +86,7 @@
   register: docker_pull
   changed_when: '"Downloaded newer image" in docker_pull.stdout'
 
-# Setup list of services per subcluster
-- set_fact: servicelist={{services[cluster][subcluster]}}
-- set_fact:
-    servicelist:
-      - key: "{{db_var}}"
-        value: "{{services[cluster][subcluster][db_var]}}"
-  when: db_var is defined
-
-- set_fact: servicelist={{servicelist|items2dict}}
-  when: db_var is defined
-
-- name: Iterate over services inside the subcluster
+- name: Iterate over services
   include_tasks: service.yml
   with_dict:
     - "{{servicelist}}"
