--- a/roles/redisdb/templates/haproxy.cfg
+++ b/roles/redisdb/templates/haproxy.cfg
@@ -1,5 +1,5 @@
 global
-    stats socket ipv4@127.0.0.1:{{haproxy_api_port + services[cluster][subcluster][service]['port_offset']}} level admin
+    stats socket ipv4@127.0.0.1:{{haproxy_api_port + services[service]['port_offset']}} level admin
     tune.ssl.default-dh-param 2048
     ssl-default-bind-ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256
     ssl-default-bind-options no-sslv3 no-tlsv10 no-tlsv11 no-tls-tickets
@@ -20,59 +20,59 @@ defaults
 backend srv1
     option tcp-check
     tcp-check connect
-    tcp-check send AUTH\ {{secrets[cluster][subcluster][service]['password']}}\r\n
+    tcp-check send AUTH\ {{secrets[service]['password']}}\r\n
     tcp-check expect string +OK
     tcp-check send PING\r\n
     tcp-check expect string +PONG
     tcp-check send SENTINEL\ master\ default\r\n
-    tcp-check expect string {{instances[cluster][subcluster]['srv1']}}
+    tcp-check expect string {{instances['srv1']}}
     tcp-check send QUIT\r\n
     tcp-check expect string +OK
 
-    server redis1 {{instances[cluster][subcluster]['srv1']}}:{{redis_port + services[cluster][subcluster][service]['port_offset']}} check addr {{instances[cluster][subcluster]['srv1']}} port {{sentinel_port + services[cluster][subcluster][service]['port_offset']}}
-    server redis2 {{instances[cluster][subcluster]['srv1']}}:{{redis_port + services[cluster][subcluster][service]['port_offset']}} check addr {{instances[cluster][subcluster]['srv2']}} port {{sentinel_port + services[cluster][subcluster][service]['port_offset']}}
-    server redis3 {{instances[cluster][subcluster]['srv1']}}:{{redis_port + services[cluster][subcluster][service]['port_offset']}} check addr {{instances[cluster][subcluster]['srv3']}} port {{sentinel_port + services[cluster][subcluster][service]['port_offset']}}
+    server redis1 {{instances['srv1']}}:{{redis_port + services[service]['port_offset']}} check addr {{instances['srv1']}} port {{sentinel_port + services[service]['port_offset']}}
+    server redis2 {{instances['srv1']}}:{{redis_port + services[service]['port_offset']}} check addr {{instances['srv2']}} port {{sentinel_port + services[service]['port_offset']}}
+    server redis3 {{instances['srv1']}}:{{redis_port + services[service]['port_offset']}} check addr {{instances['srv3']}} port {{sentinel_port + services[service]['port_offset']}}
 
 
 # Check 3 sentinels to see if they think srv2 is master
 backend srv2
     option tcp-check
     tcp-check connect
-    tcp-check send AUTH\ {{secrets[cluster][subcluster][service]['password']}}\r\n
+    tcp-check send AUTH\ {{secrets[service]['password']}}\r\n
     tcp-check expect string +OK
     tcp-check send PING\r\n
     tcp-check expect string +PONG
     tcp-check send SENTINEL\ master\ default\r\n
-    tcp-check expect string {{instances[cluster][subcluster]['srv2']}}
+    tcp-check expect string {{instances['srv2']}}
     tcp-check send QUIT\r\n
     tcp-check expect string +OK
 
-    server redis1 {{instances[cluster][subcluster]['srv2']}}:{{redis_port + services[cluster][subcluster][service]['port_offset']}} check addr {{instances[cluster][subcluster]['srv1']}} port {{sentinel_port + services[cluster][subcluster][service]['port_offset']}}
-    server redis2 {{instances[cluster][subcluster]['srv2']}}:{{redis_port + services[cluster][subcluster][service]['port_offset']}} check addr {{instances[cluster][subcluster]['srv2']}} port {{sentinel_port + services[cluster][subcluster][service]['port_offset']}}
-    server redis3 {{instances[cluster][subcluster]['srv2']}}:{{redis_port + services[cluster][subcluster][service]['port_offset']}} check addr {{instances[cluster][subcluster]['srv3']}} port {{sentinel_port + services[cluster][subcluster][service]['port_offset']}}
+    server redis1 {{instances['srv2']}}:{{redis_port + services[service]['port_offset']}} check addr {{instances['srv1']}} port {{sentinel_port + services[service]['port_offset']}}
+    server redis2 {{instances['srv2']}}:{{redis_port + services[service]['port_offset']}} check addr {{instances['srv2']}} port {{sentinel_port + services[service]['port_offset']}}
+    server redis3 {{instances['srv2']}}:{{redis_port + services[service]['port_offset']}} check addr {{instances['srv3']}} port {{sentinel_port + services[service]['port_offset']}}
 
 
 # Check 3 sentinels to see if they think srv3 is master
 backend srv3
     option tcp-check
     tcp-check connect
-    tcp-check send AUTH\ {{secrets[cluster][subcluster][service]['password']}}\r\n
+    tcp-check send AUTH\ {{secrets[service]['password']}}\r\n
     tcp-check expect string +OK
     tcp-check send PING\r\n
     tcp-check expect string +PONG
     tcp-check send SENTINEL\ master\ default\r\n
-    tcp-check expect string {{instances[cluster][subcluster]['srv3']}}
+    tcp-check expect string {{instances['srv3']}}
     tcp-check send QUIT\r\n
     tcp-check expect string +OK
 
-    server redis1 {{instances[cluster][subcluster]['srv3']}}:{{redis_port + services[cluster][subcluster][service]['port_offset']}} check addr {{instances[cluster][subcluster]['srv1']}} port {{sentinel_port + services[cluster][subcluster][service]['port_offset']}}
-    server redis2 {{instances[cluster][subcluster]['srv3']}}:{{redis_port + services[cluster][subcluster][service]['port_offset']}} check addr {{instances[cluster][subcluster]['srv2']}} port {{sentinel_port + services[cluster][subcluster][service]['port_offset']}}
-    server redis3 {{instances[cluster][subcluster]['srv3']}}:{{redis_port + services[cluster][subcluster][service]['port_offset']}} check addr {{instances[cluster][subcluster]['srv3']}} port {{sentinel_port + services[cluster][subcluster][service]['port_offset']}}
+    server redis1 {{instances['srv3']}}:{{redis_port + services[service]['port_offset']}} check addr {{instances['srv1']}} port {{sentinel_port + services[service]['port_offset']}}
+    server redis2 {{instances['srv3']}}:{{redis_port + services[service]['port_offset']}} check addr {{instances['srv2']}} port {{sentinel_port + services[service]['port_offset']}}
+    server redis3 {{instances['srv3']}}:{{redis_port + services[service]['port_offset']}} check addr {{instances['srv3']}} port {{sentinel_port + services[service]['port_offset']}}
 
 
 # Main Redis frontend, always directed to master, with SSL bind only to private subnet address (used by application)
 frontend ft_redis_ssl # [port 6379 + offset]
-    bind {{ansible_default_ipv4.address}}:{{haproxy_redis_ssl_port + services[cluster][subcluster][service]['port_offset']}} ssl crt /etc/quiq.corp.crt.and.key.pem
+    bind {{ansible_default_ipv4.address}}:{{haproxy_redis_ssl_port + services[service]['port_offset']}} ssl crt /etc/quiq.corp.crt.and.key.pem
     acl ACL_redis_1_is_down nbsrv(srv1) lt 2
     acl ACL_redis_2_is_down nbsrv(srv2) lt 2
     acl ACL_redis_3_is_down nbsrv(srv3) lt 2
@@ -83,7 +83,7 @@ frontend ft_redis_ssl # [port 6379 + offset]
 
 # Redis frontend, always directed to master, withous SSL bind only to localhost (used by redis-commander)
 frontend ft_redis_nonssl # [port 6379 + offset]
-    bind 127.0.0.1:{{haproxy_redis_ssl_port + services[cluster][subcluster][service]['port_offset']}}
+    bind 127.0.0.1:{{haproxy_redis_ssl_port + services[service]['port_offset']}}
     acl ACL_redis_1_is_down nbsrv(srv1) lt 2
     acl ACL_redis_2_is_down nbsrv(srv2) lt 2
     acl ACL_redis_3_is_down nbsrv(srv3) lt 2
@@ -96,10 +96,10 @@ frontend ft_redis_nonssl # [port 6379 + offset]
 backend bk_sentinel_local
     option tcp-check
     tcp-check connect
-    server sentinel_local 127.0.0.1:{{sentinel_port + services[cluster][subcluster][service]['port_offset']}} check inter 5s
+    server sentinel_local 127.0.0.1:{{sentinel_port + services[service]['port_offset']}} check inter 5s
 
 frontend ft_sentinel_ssl # [port 16379 + offset]
-    bind *:{{haproxy_sentinel_ssl_port + services[cluster][subcluster][service]['port_offset']}} ssl crt /etc/quiq.corp.crt.and.key.pem
+    bind *:{{haproxy_sentinel_ssl_port + services[service]['port_offset']}} ssl crt /etc/quiq.corp.crt.and.key.pem
     use_backend bk_sentinel_local
 
 
@@ -107,25 +107,25 @@ frontend ft_sentinel_ssl # [port 16379 + offset]
 backend bk_redis_local
     option tcp-check
     tcp-check connect
-    server redis_local 127.0.0.1:{{redis_port + services[cluster][subcluster][service]['port_offset']}} check inter 5s
+    server redis_local 127.0.0.1:{{redis_port + services[service]['port_offset']}} check inter 5s
 
 
 # Direct NON-SSL connection to local Redis (used by replica and sentinels)
 frontend ft_redis_local # [port 46379 + offset]
-    bind *:{{haproxy_redis_local_port + services[cluster][subcluster][service]['port_offset']}}
+    bind *:{{haproxy_redis_local_port + services[service]['port_offset']}}
     use_backend bk_redis_local
 
 
 # Direct connection to local Redis over SSL (used by status check scripts)
 frontend ft_redis_local_ssl # [port 56379 + offset]
-    bind *:{{haproxy_redis_local_ssl_port + services[cluster][subcluster][service]['port_offset']}} ssl crt /etc/quiq.corp.crt.and.key.pem
+    bind *:{{haproxy_redis_local_ssl_port + services[service]['port_offset']}} ssl crt /etc/quiq.corp.crt.and.key.pem
     use_backend bk_redis_local
 
 
 # Haproxy API, unsecured port bind to localhost and SSL/TLS secured bind only to private subnet address
 backend api_loopback
-    server haproxy_api 127.0.0.1:{{haproxy_api_port + services[cluster][subcluster][service]['port_offset']}} check inter 5s
+    server haproxy_api 127.0.0.1:{{haproxy_api_port + services[service]['port_offset']}} check inter 5s
 
 frontend api_loopback_ssl # [port 9899 + offset]
-    bind {{ansible_default_ipv4.address}}:{{haproxy_api_port + services[cluster][subcluster][service]['port_offset']}} ssl crt /etc/quiq.corp.crt.and.key.pem verify required ca-file /etc/quiq.corp.crt.and.key.pem
+    bind {{ansible_default_ipv4.address}}:{{haproxy_api_port + services[service]['port_offset']}} ssl crt /etc/quiq.corp.crt.and.key.pem verify required ca-file /etc/quiq.corp.crt.and.key.pem
     use_backend api_loopback
