--- a/roles/redisdb/defaults/main.yml
+++ b/roles/redisdb/defaults/main.yml
@@ -1,9 +1,18 @@
 ---
 
+haproxy_image: haproxy
 haproxy_version: 2.4.8-alpine
+
+redis_image: redis
 redis_version: 6.2.6-alpine
+
+redis_exporter_image: quiq/redis_exporter
 redis_exporter_version: 20191114
+
+redis_commander_image: quiq/redis-commander
 redis_commander_version: 20191212
+
+haproxy_exporter_image: quiq/haproxy_exporter
 haproxy_exporter_version: 20190408
 
 redis_port: 36379
