--- a/roles/redisdb/templates/redis.conf
+++ b/roles/redisdb/templates/redis.conf
@@ -25,3 +25,7 @@ appendonly yes
 auto-aof-rewrite-percentage 100
 auto-aof-rewrite-min-size 64mb
 aof-use-rdb-preamble yes
+
+{{ for module in redis_modules }}
+loadmodule {{ module }}
+{{ endfor }}
