fix jinja for loop syntax

--- a/roles/redisdb/templates/redis.conf
+++ b/roles/redisdb/templates/redis.conf
@@ -26,6 +26,6 @@ auto-aof-rewrite-percentage 100
 auto-aof-rewrite-min-size 64mb
 aof-use-rdb-preamble yes
 
-{{ for module in redis_modules }}
+{% for module in redis_modules %}
 loadmodule {{ module }}
-{{ endfor }}
+{% endfor %}
