--- a/roles/redisdb/templates/haproxy.cfg
+++ b/roles/redisdb/templates/haproxy.cfg
@@ -72,7 +72,7 @@ backend srv3
 
 # Main Redis frontend, always directed to master, with SSL bind only to private subnet address (used by application)
 frontend ft_redis_ssl # [port 6379 + offset]
-    bind {{ansible_default_ipv4.address}}:{{haproxy_redis_ssl_port + services[service]['port_offset']}} ssl crt /etc/quiq.corp.crt.and.key.pem
+    bind {{ansible_default_ipv4.address}}:{{haproxy_redis_ssl_port + services[service]['port_offset']}} ssl crt /etc/full.pem
     acl ACL_redis_1_is_down nbsrv(srv1) lt 2
     acl ACL_redis_2_is_down nbsrv(srv2) lt 2
     acl ACL_redis_3_is_down nbsrv(srv3) lt 2
@@ -99,7 +99,7 @@ backend bk_sentinel_local
     server sentinel_local 127.0.0.1:{{sentinel_port + services[service]['port_offset']}} check inter 5s
 
 frontend ft_sentinel_ssl # [port 16379 + offset]
-    bind *:{{haproxy_sentinel_ssl_port + services[service]['port_offset']}} ssl crt /etc/quiq.corp.crt.and.key.pem
+    bind *:{{haproxy_sentinel_ssl_port + services[service]['port_offset']}} ssl crt /etc/full.pem
     use_backend bk_sentinel_local
 
 
@@ -118,7 +118,7 @@ frontend ft_redis_local # [port 46379 + offset]
 
 # Direct connection to local Redis over SSL (used by status check scripts)
 frontend ft_redis_local_ssl # [port 56379 + offset]
-    bind *:{{haproxy_redis_local_ssl_port + services[service]['port_offset']}} ssl crt /etc/quiq.corp.crt.and.key.pem
+    bind *:{{haproxy_redis_local_ssl_port + services[service]['port_offset']}} ssl crt /etc/full.pem
     use_backend bk_redis_local
 
 
@@ -127,5 +127,5 @@ backend api_loopback
     server haproxy_api 127.0.0.1:{{haproxy_api_port + services[service]['port_offset']}} check inter 5s
 
 frontend api_loopback_ssl # [port 9899 + offset]
-    bind {{ansible_default_ipv4.address}}:{{haproxy_api_port + services[service]['port_offset']}} ssl crt /etc/quiq.corp.crt.and.key.pem verify required ca-file /etc/quiq.corp.crt.and.key.pem
+    bind {{ansible_default_ipv4.address}}:{{haproxy_api_port + services[service]['port_offset']}} ssl crt /etc/full.pem verify required ca-file /etc/full.pem
     use_backend api_loopback
