--- a/roles/redisdb/templates/haproxy.cfg
+++ b/roles/redisdb/templates/haproxy.cfg
@@ -129,3 +129,11 @@ backend api_loopback
 frontend api_loopback_ssl # [port 9899 + offset]
     bind {{ansible_default_ipv4.address}}:{{haproxy_api_port + services[service]['port_offset']}} ssl crt /etc/full.pem verify required ca-file /etc/full.pem
     use_backend api_loopback
+
+# Healthckeck to be used to manage DNS records (removing from pool when server not available)
+frontend healthchecker # [port 63790 + offset]
+        mode http
+        bind *:{{haproxy_healthchecker_https_port + services[service]['port_offset']}} ssl crt /etc/full.pem
+        acl redis_local_down nbsrv(bk_redis_local) lt 1
+        monitor-uri /health
+        monitor fail if redis_local_down
