--- a/roles/redisdb/templates/redis.conf
+++ b/roles/redisdb/templates/redis.conf
@@ -29,3 +29,5 @@ aof-use-rdb-preamble yes
 {% for module in redis_modules %}
 loadmodule {{ module }}
 {% endfor %}
+
+aclfile /etc/redis.users.acl 
