--- a/roles/redisdb/templates/haproxy.cfg
+++ b/roles/redisdb/templates/haproxy.cfg
@@ -1,3 +1,5 @@
+{% if not services[service]['tls'] %}
+
 global
     stats socket ipv4@127.0.0.1:{{haproxy_api_port + services[service]['port_offset']}} level admin
     tune.ssl.default-dh-param 2048
@@ -137,3 +139,4 @@ frontend healthchecker # [port 63790 + offset]
         acl redis_local_down nbsrv(bk_redis_local) lt 1
         monitor-uri /health
         monitor fail if redis_local_down
+{% endif %}
