--- a/roles/redisdb/templates/redis.conf
+++ b/roles/redisdb/templates/redis.conf
@@ -1,5 +1,9 @@
 dir "/data"
+{% if services[service]['tls'] %}
+port {{46379 + services[service]['port_offset']}}
+{% else %}
 port {{redis_port + services[service]['port_offset']}}
+{% endif %}
 requirepass {{secrets[service]['password']}}
 masterauth {{secrets[service]['password']}}
 
@@ -17,7 +21,12 @@ repl-diskless-sync-delay 5
 latency-monitor-threshold 10
 
 replica-announce-ip {{ansible_default_ipv4.address}}
+
+{% if services[service]['tls'] %}
+replica-announce-port {{6379 + services[service]['port_offset']}}
+{% else %}
 replica-announce-port {{redis_port + services[service]['port_offset']}}
+{% endif %}
 replicaof localhost 0
 
 # AOF
@@ -31,3 +40,16 @@ loadmodule {{ module }}
 {% endfor %}
 
 aclfile /etc/redis.users.acl 
+
+{% if services[service]['tls'] %}
+tls-port {{ 6379 + services[service]['port_offset'] }}  
+tls-cert-file /opt/ssl/{{ redis_crt }}
+tls-key-file /opt/ssl/{{ redis_key }}
+tls-ca-cert-file /opt/ssl/{{ redis_crt }}
+                                             
+#tls-protocols "TLSv1.2"                      
+#tls-ciphersuites TLS_CHACHA20_POLY1305_SHA256
+                                             
+tls-replication yes                          
+tls-auth-clients optional                    
+{% endif %}
