feat(redis/sentinel): use hostname instead of IP

--- a/roles/redisdb/templates/redis.conf
+++ b/roles/redisdb/templates/redis.conf
@@ -20,7 +20,11 @@ repl-diskless-sync-delay 5
 # Latency monitor (like slow log) ms
 latency-monitor-threshold 10
 
+{% if services[service]['hostname'] %}
+replica-announce-ip {{inventory_hostname}}
+{% else %}
 replica-announce-ip {{ansible_default_ipv4.address}}
+{% endif %}
 
 {% if services[service]['tls'] %}
 replica-announce-port {{6379 + services[service]['port_offset']}}
